--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -31,29 +31,50 @@ spec:
     chart: authentik
     helm:
       valuesObject:
-        #global:
-
         authentik:
           error_reporting:
             enabled: true
-          envFrom:
-            - secretRef:
-                name: authentik-secrets
+          # Use env instead of envFrom
+          env:
+            AUTHENTIK_SECRET_KEY:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: AUTHENTIK_SECRET_KEY
+            AUTHENTIK_POSTGRESQL__PASSWORD:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: AUTHENTIK_POSTGRESQL__PASSWORD
+            AUTHENTIK_POSTGRESQL__HOST:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: AUTHENTIK_POSTGRESQL__HOST
+            AUTHENTIK_POSTGRESQL__NAME:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: AUTHENTIK_POSTGRESQL__NAME
+            AUTHENTIK_POSTGRESQL__USER:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: AUTHENTIK_POSTGRESQL__USER
         server:
-          envFrom:
-            - secretRef:
-                name: authentik-secrets
           ingress:
-            # Specify kubernetes ingress controller class name
             ingressClassName: nginx
             enabled: true
             hosts:
               - authentik.k8s.yanello.net
         postgresql:
           enabled: true
-          envFrom:
-            - secretRef:
-                name: authentik-secrets
+          auth:
+            postgresPassword:
+              valueFrom:
+                secretKeyRef:
+                  name: authentik-secrets
+                  key: POSTGRES_PASSWORD
           primary:
             persistence:
               enabled: true
