--- a/argocd/apps/nvidia-device-plugin/app.yaml
+++ b/argocd/apps/nvidia-device-plugin/app.yaml
@@ -21,7 +21,8 @@ spec:
     targetRevision: "*"
     chart: nvidia-device-plugin
     helm:
-      # valuesObject:
+      valuesObject:
+        gfd.enabled: true
       #   dcgmExporter.enabled: false
       #   node-feature-discovery:
       #     worker:
