--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -52,5 +52,8 @@ spec:
               enabled: true
               storageClass: nfs-storage
               accessMode: ReadWriteOnce
+          envFrom:
+            - secretRef:
+                name: authentik-secrets
         redis:
           enabled: true
