--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: authentik-secrets
+    name: authentik
     namespace: authentik
 type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
-    #ENC[AES256_GCM,data:XDzynQyqozGuWzpDqHVbIBsg9PRe+mdO+2sMqoEMfNHaDLV0zYwe1JT82HBOspgIjnzfP+l5tucl5mhJtGp8isdFmlYTGpvEHf01DEsN8yewkP00WmH+6SfvL9LVsMtT3qwpEjTfcw==,iv:0Uz7iTVnXtqE2pKNwuk4VYIQUWVgnFihA/Y0XvDgc5Q=,tag:Gwau78b0AfxIwokF0cmw1g==,type:comment]
-    #ENC[AES256_GCM,data:/f8+41p660fQEa3cVYMk6+EdsNSY384x1WfCaHZ5L+Y57ojxg9LcAX+AVS7o/pZu7PkHOlvBVB8d5VBTqfkNy0j9mDe7cBPv4li6aHuo4i9uTmA94k2uPOCi7cZxv4TLo6HukZhncXS2vIGMmYing50ZndU=,iv:zp1wlQ93JuxAojU0qQV41wGkJLawpPOkf5qVn0X22wQ=,tag:NcFWNnowiBRlkKAGeT/8nQ==,type:comment]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:hM+Q0BapmAmrun1rSkVPXfEDe4p3LvG2MyUGzydXg7I8MaaDBgOwc00YkkTJWfZMoBqYeT59aRiL/X0t6+g1FEFxzXNBtazoaf6nt4GcHts=,iv:1vMP+wLRRLkNEkzBkkVqaVtm1xTcwqX+gArxJ5+1bYg=,tag:IDfzWZH992nhmesruLgHJQ==,type:str]
+    AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:tUUK4xLvIxWXqQ8fWMON+NZ9usr0IPRxL0DWEg0QMvOBuJ+cTPa4GD9XrgnMiS0CQV6H5bWlk6cfbPGySEJfo5+sMmz4B8RSdjeQFzmx8Tc=,iv:oJRaujI2of1IvD969lneDV9Smnawk/B7OVQLkGZ/C2E=,tag:iFhfQvvid8QUPNiYVWAjjA==,type:str]
     AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:h+8uk6ppsqDkeL3n1XuC9d73Pew=,iv:zwefQQU/N6208UPY603P9EK1yVqesz0J+GMOFZq4KaA=,tag:rvOWNNsfys+OwvR7cZRsnQ==,type:str]
     AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:h1Y4sIPnAW9W,iv:sOi2YrL+wGHmD7oU/DFZu4nIWnO5SRmv7QYvVJ0LBJQ=,tag:YzFIbmFU+TLdgN5+4ksmFw==,type:str]
     AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:k1ariTsf+JtB,iv:0+wz74LXpOQtt3uovGiGzioGjjZw0g3cXZzbWxvTk5Y=,tag:uWL4ufalJDOxXtTFw8/4Zg==,type:str]
@@ -26,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T16:46:15Z"
-    mac: ENC[AES256_GCM,data:Ch0cx+gV7YTB4EWWdB1MV257GEWDcy/vSBqTV3X6NUCzlnaSibW2kjLYQZWVXx2VmL9MKiuMoUdJ2tFmhoMo3Nt3p9ERQTAoxwgTgTgGWYrdfc48ztZ51tSj5HO+vl7JXTL03NqaZwbJ7UdYBnzEFDfwWfizSgw8R25FQhr1E5A=,iv:Zu9At4WD6EGqJXD3p40SKVADQpgzrwkEHrrYxpSncV8=,tag:S9D/mqILtNITkFcDUPO+Fg==,type:str]
+    lastmodified: "2025-01-20T16:52:57Z"
+    mac: ENC[AES256_GCM,data:dqn2iahDrXaiab7bzH20gF521XHk6BQUrqxZdgCdjgog2gkVmM130oZhp9v7DF2xxJtRyvW3Sf3BfPsvXl5AxkwBkjHv/ArB6wDnvOZtsOvAr58xyJ7NflLvUnRUyddFaFmJ/pCQGhg5alxM/RP3snUbUnUB3Ka9AO8XUbszrrs=,iv:oZ5OTX1AhGhJaS/LkX69J7Jrjqws/m4THhZAnR7UT6c=,tag:1gN0qrMBIuvCnvEsLml5Jw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
