--- a/argocd/apps/authentik/secrets/secret-generator.yaml
+++ b/argocd/apps/authentik/secrets/secret-generator.yaml
@@ -11,5 +11,5 @@ metadata:
           # otherwise, path should be relative to manifest files, like
           # path: ../../../ksops
 files:
-  - ./postgresql-secret.yaml
+  - ./postgresql-secret.enc.yaml
   - ./authentik-secret.enc.yaml
