--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: authentik
+    name: authentik-secrets
     namespace: authentik
 type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:hM+Q0BapmAmrun1rSkVPXfEDe4p3LvG2MyUGzydXg7I8MaaDBgOwc00YkkTJWfZMoBqYeT59aRiL/X0t6+g1FEFxzXNBtazoaf6nt4GcHts=,iv:1vMP+wLRRLkNEkzBkkVqaVtm1xTcwqX+gArxJ5+1bYg=,tag:IDfzWZH992nhmesruLgHJQ==,type:str]
-    AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:tUUK4xLvIxWXqQ8fWMON+NZ9usr0IPRxL0DWEg0QMvOBuJ+cTPa4GD9XrgnMiS0CQV6H5bWlk6cfbPGySEJfo5+sMmz4B8RSdjeQFzmx8Tc=,iv:oJRaujI2of1IvD969lneDV9Smnawk/B7OVQLkGZ/C2E=,tag:iFhfQvvid8QUPNiYVWAjjA==,type:str]
-    AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:h+8uk6ppsqDkeL3n1XuC9d73Pew=,iv:zwefQQU/N6208UPY603P9EK1yVqesz0J+GMOFZq4KaA=,tag:rvOWNNsfys+OwvR7cZRsnQ==,type:str]
-    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:h1Y4sIPnAW9W,iv:sOi2YrL+wGHmD7oU/DFZu4nIWnO5SRmv7QYvVJ0LBJQ=,tag:YzFIbmFU+TLdgN5+4ksmFw==,type:str]
-    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:k1ariTsf+JtB,iv:0+wz74LXpOQtt3uovGiGzioGjjZw0g3cXZzbWxvTk5Y=,tag:uWL4ufalJDOxXtTFw8/4Zg==,type:str]
+#ENC[AES256_GCM,data:Rjjkgtzg5wxXD9baDzyMncjUzCo45h2RV2k+g2dPbtnKQhuuDRhkbZpI3jf4Ho/nrCaerK1o0M/nYiIivw4M3KA5jlDlPvyYWALcV9KRSCyHQ/QLmw8k2V1Ta916Q+1PZW2l1A==,iv:HU6UuinqloKlsDQe4ZxeyymnGl+S9VDu2t/5pEtGw9s=,tag:v3fCQ8mDsuyrfjRLM5R2rA==,type:comment]
+#ENC[AES256_GCM,data:/VZGqHzkmLhwlnzoDczFI3gGBsHTwlLffPYR3rNWeI20lTIrW1+sYU6CKkN6B3xU1ofXedO5xAeEqNTDIU/IEOWkxqPLO1MwVdV/QivVTF8pi1L6KsVZUySHrZvhpimpDYdqja5695w9QsGYw9BiBDQ=,iv:2AjEKQyjkIpC7SbZBD0vsG5OMgqXtB5Yn0M9pnCTmqI=,tag:K6y4zds+f5cJRX7rMCSddA==,type:comment]
+#ENC[AES256_GCM,data:HYFAvlL4ZN4EvSlqKk/KQJSIb7KkRxgVUF7iAF0l7doC+0AUGNbnowvF/bGM+HA1jQ==,iv:Whw9DjMskNr2KL/U6Ie3WS3qrXWd/0KpsWPuY48hvtA=,tag:T4AAl2333BbpP2dScWGmyg==,type:comment]
+#ENC[AES256_GCM,data:UgY/40tiwSP9Zm3h+bknpzJhMI/7T1N4Xlls5zpb7Sjyexs1T4g=,iv:V1fQP68rLlUzln8+5eO3pwCnoVSy/l/0r9WBSvNHehc=,tag:OzNYS2Q4YUdfdTnFbrh/UQ==,type:comment]
+#ENC[AES256_GCM,data:PMZQgVYk5ddGB1kxwlmADEcf+6rXRmI9XQGW37eMTGOyT6crJA0=,iv:KvOs4x6geSI8nN2WBMzM56+Omio+d8il7g3tGVD85Ac=,tag:1X6HppGb+ElDRy8ZHjD56g==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T16:52:57Z"
-    mac: ENC[AES256_GCM,data:dqn2iahDrXaiab7bzH20gF521XHk6BQUrqxZdgCdjgog2gkVmM130oZhp9v7DF2xxJtRyvW3Sf3BfPsvXl5AxkwBkjHv/ArB6wDnvOZtsOvAr58xyJ7NflLvUnRUyddFaFmJ/pCQGhg5alxM/RP3snUbUnUB3Ka9AO8XUbszrrs=,iv:oZ5OTX1AhGhJaS/LkX69J7Jrjqws/m4THhZAnR7UT6c=,tag:1gN0qrMBIuvCnvEsLml5Jw==,type:str]
+    lastmodified: "2025-01-20T17:04:49Z"
+    mac: ENC[AES256_GCM,data:DX1jVuxufGTQ517HcFgtG56z8/bQN4j2K5RuoxdaWjrxcCv/mx38x1Avh8qBJh2/BWncSHOALZ+OvFlwAy+qd5JpLPSl58uXJQfWYj+4MbmaVprGdGg/KGHYKGNOlgUZqV8bjgZMSLkd4/Xbty/PivzfNvnAhv3DlTicK/yfSSY=,iv:ePjsZp9u5Ob9nZLU79t3LL3bRFAmH53izZ/mK24ZscM=,tag:lVjx9vlCuv8hvIQTuAWBqw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
