change secrets around2

--- a/argocd/apps/authentik/secrets/postgresql-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/postgresql-secret.enc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: authentik-postgresql
+    name: authentik-psql
     namespace: authentik
 type: Opaque
 stringData:
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T16:52:34Z"
-    mac: ENC[AES256_GCM,data:2WvDg+l5vQvGZfYyLBAFUG/L0kgg/N7NUBY7yX45uEmKh/1EPWrKX4EmXbud1RAbH2ee8KNIgLtGoYpnhCIxz+KnlJBZYU5+4m47YjfaZzImyZyFZe4OXpZjsvMYk52UY45849LEND76sL9yPibkR1FJmf9304Z9rCPaU0SKvDY=,iv:vmPD03zIjkZ4hIgWDULnIzDymt8TxgNFVh8tFAjsWYs=,tag:MrCfXe5Oxnf+iR9oYX/rBw==,type:str]
+    lastmodified: "2025-01-20T17:07:40Z"
+    mac: ENC[AES256_GCM,data:G04cqlJXXCM0+ERcq1KO2z12XHo49Nc7Au9ujpO0duhcasBe3uYA+A93UsWA+pkO7bNhJmiuxnPdcDNawnaVqXhJazNu1LIgmvLz52ITZ0G+LYnBeevcyw6p4YR3TYHhlSzalZOBP1ysZ1di0Am6aVYVRGKbGjNcU680kr+EiSk=,iv:CaNpgVyc1XFtdXe5+EmmuXL6ZAwxnikTBU0XNkTRLn8=,tag:0MGsI1ZPRBBilUP/yhNkYg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
