change secrets around3

--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -6,11 +6,11 @@ metadata:
 type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
-#ENC[AES256_GCM,data:Rjjkgtzg5wxXD9baDzyMncjUzCo45h2RV2k+g2dPbtnKQhuuDRhkbZpI3jf4Ho/nrCaerK1o0M/nYiIivw4M3KA5jlDlPvyYWALcV9KRSCyHQ/QLmw8k2V1Ta916Q+1PZW2l1A==,iv:HU6UuinqloKlsDQe4ZxeyymnGl+S9VDu2t/5pEtGw9s=,tag:v3fCQ8mDsuyrfjRLM5R2rA==,type:comment]
-#ENC[AES256_GCM,data:/VZGqHzkmLhwlnzoDczFI3gGBsHTwlLffPYR3rNWeI20lTIrW1+sYU6CKkN6B3xU1ofXedO5xAeEqNTDIU/IEOWkxqPLO1MwVdV/QivVTF8pi1L6KsVZUySHrZvhpimpDYdqja5695w9QsGYw9BiBDQ=,iv:2AjEKQyjkIpC7SbZBD0vsG5OMgqXtB5Yn0M9pnCTmqI=,tag:K6y4zds+f5cJRX7rMCSddA==,type:comment]
-#ENC[AES256_GCM,data:HYFAvlL4ZN4EvSlqKk/KQJSIb7KkRxgVUF7iAF0l7doC+0AUGNbnowvF/bGM+HA1jQ==,iv:Whw9DjMskNr2KL/U6Ie3WS3qrXWd/0KpsWPuY48hvtA=,tag:T4AAl2333BbpP2dScWGmyg==,type:comment]
-#ENC[AES256_GCM,data:UgY/40tiwSP9Zm3h+bknpzJhMI/7T1N4Xlls5zpb7Sjyexs1T4g=,iv:V1fQP68rLlUzln8+5eO3pwCnoVSy/l/0r9WBSvNHehc=,tag:OzNYS2Q4YUdfdTnFbrh/UQ==,type:comment]
-#ENC[AES256_GCM,data:PMZQgVYk5ddGB1kxwlmADEcf+6rXRmI9XQGW37eMTGOyT6crJA0=,iv:KvOs4x6geSI8nN2WBMzM56+Omio+d8il7g3tGVD85Ac=,tag:1X6HppGb+ElDRy8ZHjD56g==,type:comment]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:UcFhIaIA+rqbeS7lPdnWwU6hVDfYmgdl1ptuM4+9yMqiIzInIdjL9ki3dZDC2JILvtRJDNELTAmIVJnMS5dSZpEjjMA8flpg6JndvGifYCA=,iv:EFhk+9m/8JIxeJVHWngCnG7bCTd5xWdCYMJFAJwe+Pw=,tag:CJSJhIpLlKZlU285RwscNg==,type:str]
+    AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:Y5W1475pPWPsHrFYOk4WESQzzmOtQnTecz+MFTdA0H2gJDXfmxI3Uk+btsE/XTTnb42jBGLS4hCvy0Srg4xPYdmUKeOf6Dq4HGNUIznIiaM=,iv:jbLPKUxaqN13ZFYRx9XQzdzmJWajqE7Taju5jFT8Ag4=,tag:qEH3//t/d63BvWWqtyQSOg==,type:str]
+    AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
+    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:nRJVo7cgTiv5,iv:Qzy4+EKG7++9kSSlkCaPfurtQDDaCUJECcRZ17pvN2A=,tag:r5pj/l6lggOLGbY05zkFvA==,type:str]
+    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:BWUT7JiMYevQ,iv:U96M8XVQ7RXWzBS5kdcHRVbj6nkACGCRmrY70b6kGmg=,tag:2Cige1Pi4UX1dgMUcjFL+w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T17:04:49Z"
-    mac: ENC[AES256_GCM,data:DX1jVuxufGTQ517HcFgtG56z8/bQN4j2K5RuoxdaWjrxcCv/mx38x1Avh8qBJh2/BWncSHOALZ+OvFlwAy+qd5JpLPSl58uXJQfWYj+4MbmaVprGdGg/KGHYKGNOlgUZqV8bjgZMSLkd4/Xbty/PivzfNvnAhv3DlTicK/yfSSY=,iv:ePjsZp9u5Ob9nZLU79t3LL3bRFAmH53izZ/mK24ZscM=,tag:lVjx9vlCuv8hvIQTuAWBqw==,type:str]
+    lastmodified: "2025-01-20T17:25:51Z"
+    mac: ENC[AES256_GCM,data:IPvID4oytM3pi7+jp63v/yX5wK4aKDnNncIbh9aB1tBfsDLS/dQm/a2g3Kt/HkrogFbJAlTKl0NplIfgmOcm3lmVzH8opJ19c+xdoGxO+b+YuI1oBuVfQ+axUQoYy/znCK1D0MY2DODkNTEUJtfY2RcxKb+pgseWns/lmCy34g0=,iv:4zmbVZeaJu/9hy36K0XKf2JhZv56ooEmveVGISg2uRE=,tag:DxhV93Duqloj1kP5oQ3zrw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
