--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -45,6 +45,8 @@ spec:
             enabled: true
             hosts:
               - authentik.k8s.yanello.net
+        redis:
+          enabled: true
         postgresql:
           enabled: true
           primary:
@@ -52,5 +54,9 @@ spec:
               enabled: true
               storageClass: nfs-storage
               accessMode: ReadWriteOnce
-        redis:
-          enabled: true
+          auth:
+            existingSecret: authentik-secrets
+            secretKeys:
+              adminPasswordKey: POSTGRES_PASSWORD
+              passwordKey: POSTGRESQL_PASSWORD
+              
