change secrets around4

--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -6,11 +6,13 @@ metadata:
 type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:UcFhIaIA+rqbeS7lPdnWwU6hVDfYmgdl1ptuM4+9yMqiIzInIdjL9ki3dZDC2JILvtRJDNELTAmIVJnMS5dSZpEjjMA8flpg6JndvGifYCA=,iv:EFhk+9m/8JIxeJVHWngCnG7bCTd5xWdCYMJFAJwe+Pw=,tag:CJSJhIpLlKZlU285RwscNg==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:Y5W1475pPWPsHrFYOk4WESQzzmOtQnTecz+MFTdA0H2gJDXfmxI3Uk+btsE/XTTnb42jBGLS4hCvy0Srg4xPYdmUKeOf6Dq4HGNUIznIiaM=,iv:jbLPKUxaqN13ZFYRx9XQzdzmJWajqE7Taju5jFT8Ag4=,tag:qEH3//t/d63BvWWqtyQSOg==,type:str]
     AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
     AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:nRJVo7cgTiv5,iv:Qzy4+EKG7++9kSSlkCaPfurtQDDaCUJECcRZ17pvN2A=,tag:r5pj/l6lggOLGbY05zkFvA==,type:str]
     AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:BWUT7JiMYevQ,iv:U96M8XVQ7RXWzBS5kdcHRVbj6nkACGCRmrY70b6kGmg=,tag:2Cige1Pi4UX1dgMUcjFL+w==,type:str]
+    password: ENC[AES256_GCM,data:2tQFkTg89CThL4Jv1CG8LTfY6zLNqI+vrCCBdt7xE2box4TYYFh2CsWVPKDeIP8oXqetZgFANceRHjb2NzLVOJxF6nFfZ2SqhuvWTIP9X4U=,iv:n2c0vLeLHZRWH2pWHtt24gc3g2ARpJVXKsozFo6Fk2M=,tag:tf2gnM6inx0i9MmdikX7FQ==,type:str]
+    postgresPassword: ENC[AES256_GCM,data:4HbBlPPjNFgHBn45hclpjtu8Ybfnb3x5MX7IEUXlMH5yYHjRQxGKybsd/fCInnBF3emo195UkGVichMDB2HYt9eVjzmwRezP0dHu+0RaeLQ=,iv:kKLDZW6oV4EDZcgJZ4Wi8U0AWNN92EjNfVPHyNHm++w=,tag:4bCkHfmNiyiIxdFWkLnt4g==,type:str]
+    replicationPassword: ENC[AES256_GCM,data:rnJEcG/UoQNyg5KDn41b+9eAFw3XhObV87P1QhHJfdoadezLSYuf7aIHH+2Qlv7BhFRXDhv6r05cIoQDJPCtyKWc5/SUh8eY6k7rFp4sJk0=,iv:6jTJCNnxT8/CyFn/vEpv6B4vBUh2c38WzjHsblGKbGE=,tag:lN+xQcBbXrFNpIxFQIJNvA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +28,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T17:25:51Z"
-    mac: ENC[AES256_GCM,data:IPvID4oytM3pi7+jp63v/yX5wK4aKDnNncIbh9aB1tBfsDLS/dQm/a2g3Kt/HkrogFbJAlTKl0NplIfgmOcm3lmVzH8opJ19c+xdoGxO+b+YuI1oBuVfQ+axUQoYy/znCK1D0MY2DODkNTEUJtfY2RcxKb+pgseWns/lmCy34g0=,iv:4zmbVZeaJu/9hy36K0XKf2JhZv56ooEmveVGISg2uRE=,tag:DxhV93Duqloj1kP5oQ3zrw==,type:str]
+    lastmodified: "2025-01-20T17:36:43Z"
+    mac: ENC[AES256_GCM,data:dGC7DhIsUXCAHUQEIu/HjXIJJk2NFatSFqeIMLoFISajHXi1w8WFFrvG2Rl6LxH75Vgx8QzZRUPXdC8VdIixe3mMMi8jRcGc/8kTSvSa2rhHjAePIMvxwgJV7Tx0IF+gojV72slkf9XYrptpRWA6OECw1yBRyg30aoKW9OocpZ8=,iv:7ARiNAadr669rYiIM3+kemYJ/mM2o9O/15ML5PI5NQw=,tag:lErhdKdfmCqhhVPMtbKciA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
