change secrets around4

--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -57,7 +57,8 @@ spec:
           auth:
             username: authentik
             existingSecret: authentik-secrets
-            # secretKeys:
-            #   adminPasswordKey: POSTGRES_PASSWORD
-            #   passwordKey: POSTGRESQL_PASSWORD
+            secretKeys:
+              adminPasswordKey: AUTHENTIK_POSTGRES__PASSWORD
+              passwordKey: AUTHENTIK_POSTGRES__PASSWORD
+              replicationPasswordKey: AUTHENTIK_POSTGRES__PASSWORD
               
