--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -10,9 +10,10 @@ stringData:
     AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
     AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:nRJVo7cgTiv5,iv:Qzy4+EKG7++9kSSlkCaPfurtQDDaCUJECcRZ17pvN2A=,tag:r5pj/l6lggOLGbY05zkFvA==,type:str]
     AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:BWUT7JiMYevQ,iv:U96M8XVQ7RXWzBS5kdcHRVbj6nkACGCRmrY70b6kGmg=,tag:2Cige1Pi4UX1dgMUcjFL+w==,type:str]
-    password: ENC[AES256_GCM,data:2tQFkTg89CThL4Jv1CG8LTfY6zLNqI+vrCCBdt7xE2box4TYYFh2CsWVPKDeIP8oXqetZgFANceRHjb2NzLVOJxF6nFfZ2SqhuvWTIP9X4U=,iv:n2c0vLeLHZRWH2pWHtt24gc3g2ARpJVXKsozFo6Fk2M=,tag:tf2gnM6inx0i9MmdikX7FQ==,type:str]
-    postgresPassword: ENC[AES256_GCM,data:4HbBlPPjNFgHBn45hclpjtu8Ybfnb3x5MX7IEUXlMH5yYHjRQxGKybsd/fCInnBF3emo195UkGVichMDB2HYt9eVjzmwRezP0dHu+0RaeLQ=,iv:kKLDZW6oV4EDZcgJZ4Wi8U0AWNN92EjNfVPHyNHm++w=,tag:4bCkHfmNiyiIxdFWkLnt4g==,type:str]
-    replicationPassword: ENC[AES256_GCM,data:rnJEcG/UoQNyg5KDn41b+9eAFw3XhObV87P1QhHJfdoadezLSYuf7aIHH+2Qlv7BhFRXDhv6r05cIoQDJPCtyKWc5/SUh8eY6k7rFp4sJk0=,iv:6jTJCNnxT8/CyFn/vEpv6B4vBUh2c38WzjHsblGKbGE=,tag:lN+xQcBbXrFNpIxFQIJNvA==,type:str]
+    #ENC[AES256_GCM,data:ngBOEG8o9CtUqEMeayM3/IcAOq2D5z3u3ALhr6ONHa+zmFESlfu4yPM6AnzqGisMwEzPFMKXklki5ELTQJMSbasmDwts4Cm9QjnRvc1bkhVRMdTGfCk3qaorlLKoRTm/2IGOMb0=,iv:sw9Hpp8HiC9qeYMf1ia77EmiD+NAQzDzhrfuMt+X8JE=,tag:BXGZMyMWC+knEKVO6rRKsw==,type:comment]
+    #ENC[AES256_GCM,data:b7NhU5cWu4sttkDOGddqDUb1lrJSNet2hWjjR03kUlXf89ernwucDHwwCEF5G20k6SrFA0i8bmeyeGnQvbZDWfOZsUFr29A3jIzQXf2fZ0jjt4r+ID+ghkfZ,iv:Hu1C6t2eVsCmbJsQLGkp4qPwZHfPuzoGrBv0iUwsijY=,tag:Zn7f0jaLyvCsdOROj+WXWw==,type:comment]
+    #ENC[AES256_GCM,data:8V7AZXd1OnjL5k/ClQzHQkZhiubNbkfypGdQWpbCaLoxP8jSZZq10crzJKs3lLyIlfr/u1N+rv68+XAv62GxTBLK23cubzQpI1RUn770eTSW7W2D4Qrvfyv8CdXNzy30WA0=,iv:CbROS7fr8wfpxTHREVeP+x7bwISB6PWq8LKNoIbtwlY=,tag:89duQQ7tHCpgwad1Cgg+fQ==,type:comment]
+    #ENC[AES256_GCM,data:RWAUFqbk0s7M9u3iXgJhjWpTGJ+kDanqLPMOnrm8mWcUxNUg1fcsQVnSXXw/uDxJ+xfBPCs1o6ZQ3It3Z9iZ9q+SeZVss+QF+YUyh7Q5+hBVk7ayu40G6nzcKme68zSjQcgehfQ=,iv:D2UZt0MDBuE3CGaF+0aYReForMvVy2zY5/RGK65x4rE=,tag:0aMRDaVD/dx6LOjm7+WOZg==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +29,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T17:36:43Z"
-    mac: ENC[AES256_GCM,data:dGC7DhIsUXCAHUQEIu/HjXIJJk2NFatSFqeIMLoFISajHXi1w8WFFrvG2Rl6LxH75Vgx8QzZRUPXdC8VdIixe3mMMi8jRcGc/8kTSvSa2rhHjAePIMvxwgJV7Tx0IF+gojV72slkf9XYrptpRWA6OECw1yBRyg30aoKW9OocpZ8=,iv:7ARiNAadr669rYiIM3+kemYJ/mM2o9O/15ML5PI5NQw=,tag:lErhdKdfmCqhhVPMtbKciA==,type:str]
+    lastmodified: "2025-01-20T17:39:45Z"
+    mac: ENC[AES256_GCM,data:sfR40sokAOt5FrPs2/4f5saHa4CyYi+YTo7ZItGYo/uwfKoB4jQ/Lc+nY6M6NEsdnzpD79z0u7HdzN+tHJUFmTt0269xbG9n/g6JY23BdlKJ3XFbxdFpXm4m5DoEAufpQRv6Pqfuof7ZpjEX/XLnxSwt5fdBKEoi55rCUFP2Pos=,iv:iLn5617I7vglMrnwUV6u3vevyidAobXjZlOr14Hkc/k=,tag:IydC9iIUU/lQfvemUSi0mA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
