--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -55,10 +55,9 @@ spec:
               storageClass: nfs-storage
               accessMode: ReadWriteOnce
           auth:
-            username: authentik
             existingSecret: authentik-secrets
             secretKeys:
               adminPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
-              passwordKey: AUTHENTIK_POSTGRESQL__PASSWORD
+              userPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
               replicationPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
               
