--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -7,6 +7,7 @@ type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:Y5W1475pPWPsHrFYOk4WESQzzmOtQnTecz+MFTdA0H2gJDXfmxI3Uk+btsE/XTTnb42jBGLS4hCvy0Srg4xPYdmUKeOf6Dq4HGNUIznIiaM=,iv:jbLPKUxaqN13ZFYRx9XQzdzmJWajqE7Taju5jFT8Ag4=,tag:qEH3//t/d63BvWWqtyQSOg==,type:str]
+    POSTGRES__PASSWORD: ENC[AES256_GCM,data:RVBKxI+J4d6XxUeHuO0qekntPq9pmW/ki+W0LUe2cLAeIbu+dQA3ez4dBWwWIlqn7xkJ0CaF3gXbEXAQ5P1fE+sB8kEs7d3JpzZI1vvT8Ac=,iv:RoGAi0G9pRh0BxtH8K9b9vyY7WB+7hVhQJPz1kBMsrY=,tag:cF+1QDJcu+m8v+IgTlSqkw==,type:str]
     AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
     AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:nRJVo7cgTiv5,iv:Qzy4+EKG7++9kSSlkCaPfurtQDDaCUJECcRZ17pvN2A=,tag:r5pj/l6lggOLGbY05zkFvA==,type:str]
     AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:BWUT7JiMYevQ,iv:U96M8XVQ7RXWzBS5kdcHRVbj6nkACGCRmrY70b6kGmg=,tag:2Cige1Pi4UX1dgMUcjFL+w==,type:str]
@@ -25,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T17:51:51Z"
-    mac: ENC[AES256_GCM,data:kVP1xJ6Qu748jVJMX0MUhblh36g4lfQqCrokQUX1+fpwEyo3HeA1QOKuBdCEEYkmOEr1MjI19HPibiVwLwSnr7+E38zNf+5BbxKl4Gu4IW5U99GpkeSvNIAsUCtY9fUG9fwx3hn5QXe6wCvoRm7D6HHqEyL4SG0g0478SMNXfUA=,iv:xKtHtwN/w5+q3AupTtXntTvP3Bm4Ly32E+f/TEokQL4=,tag:yiDQGB8EcnxpfSu3ZuwqJQ==,type:str]
+    lastmodified: "2025-01-20T17:57:18Z"
+    mac: ENC[AES256_GCM,data:m8VUg+cbqr0qnzZKn7G5O9g9czlMqusxqS2bdE3wIdcJsI3kcS4oKcVspjxEpo03dwRYLAMk+kG+7R81uZX9xoOjqK+7KYEzdn5OjJVQwpD2uMEzYOtvWBpjaoBIzk+0JP9sPm5l6JO5OvXmBb0bUJAWbnJTwId1o+bHEmX1DPo=,iv:8pF5+eTIRYzGVX19tZk4x9i0DCbewJhRPqf77HmK1as=,tag:Ka+YlfQeyIOqr9E/ipNy0A==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
