--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -9,8 +9,8 @@ stringData:
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:Y5W1475pPWPsHrFYOk4WESQzzmOtQnTecz+MFTdA0H2gJDXfmxI3Uk+btsE/XTTnb42jBGLS4hCvy0Srg4xPYdmUKeOf6Dq4HGNUIznIiaM=,iv:jbLPKUxaqN13ZFYRx9XQzdzmJWajqE7Taju5jFT8Ag4=,tag:qEH3//t/d63BvWWqtyQSOg==,type:str]
     POSTGRES__PASSWORD: ENC[AES256_GCM,data:RVBKxI+J4d6XxUeHuO0qekntPq9pmW/ki+W0LUe2cLAeIbu+dQA3ez4dBWwWIlqn7xkJ0CaF3gXbEXAQ5P1fE+sB8kEs7d3JpzZI1vvT8Ac=,iv:RoGAi0G9pRh0BxtH8K9b9vyY7WB+7hVhQJPz1kBMsrY=,tag:cF+1QDJcu+m8v+IgTlSqkw==,type:str]
     AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
-    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:nRJVo7cgTiv5,iv:Qzy4+EKG7++9kSSlkCaPfurtQDDaCUJECcRZ17pvN2A=,tag:r5pj/l6lggOLGbY05zkFvA==,type:str]
-    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:BWUT7JiMYevQ,iv:U96M8XVQ7RXWzBS5kdcHRVbj6nkACGCRmrY70b6kGmg=,tag:2Cige1Pi4UX1dgMUcjFL+w==,type:str]
+    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:AwIwgQ==,iv:0CgS9UxzqZAUT8ZcpN9bpRQUH7jN5VOCcELhJTu0S3o=,tag:KedkqMPqgs9OunqvaCE2gQ==,type:str]
+    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:5tAG0g==,iv:Uy713MKJS/X+Ew2KnNZ8s0kX2F9XOEXf0bmOb/aPxmI=,tag:sI6v6Qzv/osXSG7Z+vtsvQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T17:57:18Z"
-    mac: ENC[AES256_GCM,data:m8VUg+cbqr0qnzZKn7G5O9g9czlMqusxqS2bdE3wIdcJsI3kcS4oKcVspjxEpo03dwRYLAMk+kG+7R81uZX9xoOjqK+7KYEzdn5OjJVQwpD2uMEzYOtvWBpjaoBIzk+0JP9sPm5l6JO5OvXmBb0bUJAWbnJTwId1o+bHEmX1DPo=,iv:8pF5+eTIRYzGVX19tZk4x9i0DCbewJhRPqf77HmK1as=,tag:Ka+YlfQeyIOqr9E/ipNy0A==,type:str]
+    lastmodified: "2025-01-20T18:42:29Z"
+    mac: ENC[AES256_GCM,data:yp4Mf48DG/7lYgj2bVIsml1IIeN9wIiHoLHPBVhKYNOX6jDkNfVe8BqW/i6NwYBldCB7GLcliCc4ofA23B6RP7HdyXqBP9lcLmuCNLIQOdjWyB5PQJxMdtdg+tVQOrNUhGOG5PYN5ZMfK38iOLWdZsbAIR1VVj//ck20614I/eo=,iv:+UKei4La5MLJNBF8FbP8z8RYIstNWh9LWr76z6oo1QY=,tag:sseIxYIaWqeNMkIsFgzfQw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
