--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -54,6 +54,7 @@ spec:
               storageClass: nfs-storage
               accessMode: ReadWriteOnce
           auth:
+            username: test
             existingSecret: authentik-secrets
             secretKeys:
               adminPasswordKey: AUTHENTIK_POSTGRESQL__PASSWORD
