change secrets around12

--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -7,10 +7,7 @@ type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:Y5W1475pPWPsHrFYOk4WESQzzmOtQnTecz+MFTdA0H2gJDXfmxI3Uk+btsE/XTTnb42jBGLS4hCvy0Srg4xPYdmUKeOf6Dq4HGNUIznIiaM=,iv:jbLPKUxaqN13ZFYRx9XQzdzmJWajqE7Taju5jFT8Ag4=,tag:qEH3//t/d63BvWWqtyQSOg==,type:str]
-    POSTGRES__PASSWORD: ENC[AES256_GCM,data:RVBKxI+J4d6XxUeHuO0qekntPq9pmW/ki+W0LUe2cLAeIbu+dQA3ez4dBWwWIlqn7xkJ0CaF3gXbEXAQ5P1fE+sB8kEs7d3JpzZI1vvT8Ac=,iv:RoGAi0G9pRh0BxtH8K9b9vyY7WB+7hVhQJPz1kBMsrY=,tag:cF+1QDJcu+m8v+IgTlSqkw==,type:str]
-    AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:RLf4RGKtBaNrCXiUElEAFMVdWa0=,iv:1EF+OslrVtsawdvWnHlSsSzvqTZdLsCkqlS9zKHiJys=,tag:+zORnWoyMv5Hz/gyQe2cZg==,type:str]
-    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:AwIwgQ==,iv:0CgS9UxzqZAUT8ZcpN9bpRQUH7jN5VOCcELhJTu0S3o=,tag:KedkqMPqgs9OunqvaCE2gQ==,type:str]
-    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:5tAG0g==,iv:Uy713MKJS/X+Ew2KnNZ8s0kX2F9XOEXf0bmOb/aPxmI=,tag:sI6v6Qzv/osXSG7Z+vtsvQ==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:eP+/9vIIT/BPB5k01oUAh8gBFcwI0CVj3rk1VC3A7ppoB+dZ9+53wDn46TES9psl6OfdMPNhmy4Rv4Xf1grQA1OCYOZXsLQdZMe6K26nPCU=,iv:4lOTWPuZVaZeddMAdowyEfpTTWCCMr1zTyetIVkSiT8=,tag:1ZGQyXK4RLD+B293ffTdDA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T18:42:29Z"
-    mac: ENC[AES256_GCM,data:yp4Mf48DG/7lYgj2bVIsml1IIeN9wIiHoLHPBVhKYNOX6jDkNfVe8BqW/i6NwYBldCB7GLcliCc4ofA23B6RP7HdyXqBP9lcLmuCNLIQOdjWyB5PQJxMdtdg+tVQOrNUhGOG5PYN5ZMfK38iOLWdZsbAIR1VVj//ck20614I/eo=,iv:+UKei4La5MLJNBF8FbP8z8RYIstNWh9LWr76z6oo1QY=,tag:sseIxYIaWqeNMkIsFgzfQw==,type:str]
+    lastmodified: "2025-01-20T18:45:37Z"
+    mac: ENC[AES256_GCM,data:I008vIXhYQVSmvfIwwtUqPCCuPUMycMLlKwt/HZhxiJ/kFERxTnr5rzewmDs1EveerUo5D4Q2v2utRGGfXgS8+h2NNIUyCkaZIpJdpt5RdAEqhNpDJU5fpUOXzGvPZC/ZpqUfBnEp84jo6XoMbnRHbskpQL77YDHJOvslbJdBlM=,iv:bZds6QXYlpjaLjbHiFLN/Q4h1MgtVZVi8a35sqpGD1E=,tag:5Bb/rbO3+obnvPsYEPLYSA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
