change secrets around16

--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -46,8 +46,15 @@ spec:
               - authentik.k8s.yanello.net
         redis:
           enabled: true
-          global:
-            defaultStorageClass: nfs-storage
+          master:
+            persistence:
+              enabled: false
+          replica:
+            persistence:
+              enabled: false
+          sentinel:
+            persistence:
+              enabled: false
         postgresql:
           enabled: true
           primary:
