change secrets around17

--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -7,7 +7,7 @@ type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:df+QQCgLmxDkfDRNisZjCU9MVZwT1qLDSXcOXrAn72W+NamBCkQT1WszfkJ/YXKDSmnbdKUx2aYJES30Bca36cRNQEjuWAU2256cnA==,iv:p9YscKxct/2/bo89/Y1pxSILkBt64MfQRphpZDFdwNY=,tag:aKZo/PGZcrRKdpJPKGmPeA==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:SsGKzZo4lN5KG2BIaIt01KPs4CCE7g1vBbKBNqW5javhU1EBlwRkYZtgsuot4SZiRAZ7FI+Mp69uEyqSg4okJlAbUYAn18tKzkk3Fg==,iv:NXT9nBKCet7sKgorlxgDERgdHnLfxTHCKlHk6ar4TGE=,tag:enpRIjinDV5KQKFp3yuV6Q==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:Y5FdrUvfZGdyYvSPExMp4Hc8HTZlgCqjyoemQO3DMBKnSJBvXTiglqHn9fyjSfXOy4JyOAohtjcxsvPG7U1A6bOZ/J+hcyJnv2RKUg==,iv:M70iSfVEPGMqwIjLcyUnqq0uPjfBtyoPop+Ot70XGRI=,tag:z+BgPpJsqJ/uBrPAWRZVmw==,type:str]
+    #ENC[AES256_GCM,data:8A8+LSX7ypsCnAK2DJYybgQqexkenVBaQg3HuETHWjnf1oudSgZVN6bV4jMuLjSVR4HjU40PWDLC9Rxu2NYtClX8slfS/x5J9OdGD4vy3EFiTnwwNn1NjlYmU/GBGLg=,iv:+ioaR7NFJewAT+ajCzhfJChxVcu1d0K6K9N0/fDnJ88=,tag:PlCVMSDBVwy2uewAPeDJ8A==,type:comment]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T18:59:19Z"
-    mac: ENC[AES256_GCM,data:UicMbL6LtpF+tBX1iJ26gYpa6l7tuzfdQHfC/LQQVthAG1SEErOhowA3JYRTxCk+KgBrA73O99VZcG8JsRF1v7lsgO0kIhGcZ1EPP3GpbiWdyxDDjjnfL3/f/chpWskHxsQg+a3Uc94emVwuZUeIFtItPOlrid7B7mU9MMT3wls=,iv:yiyw8mKF8YP4OxjwXsm/q+bmn7MM0xmxN/YHc0ZpwVU=,tag:IN4S5G/t7yi37MBp4mzbMA==,type:str]
+    lastmodified: "2025-01-20T19:43:35Z"
+    mac: ENC[AES256_GCM,data:uYKcWQsVBzbQ/8+/gfcGhNEnelVlfMFBJ68+K0gsLW4boSRyX7oKvBkXW4tWPjQueky5xU+4DZlUB3zfm5R+p/qZY/CnCp3fH+AMhAoIgF1fjOcMOEmdYcxBrH+NqGD5rrgIhVIulHg+NeEwsbQBqFIHVYJ6bgirS2vco+rkLnc=,iv:R089tTlPcf6OfaXdNcrnOVKd67sKAW/C8jpN+KYBeNw=,tag:EKj6mevf7F0Q+AIGrrHe+g==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
