--- a/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/authentik-secret.enc.yaml
@@ -7,7 +7,7 @@ type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:df+QQCgLmxDkfDRNisZjCU9MVZwT1qLDSXcOXrAn72W+NamBCkQT1WszfkJ/YXKDSmnbdKUx2aYJES30Bca36cRNQEjuWAU2256cnA==,iv:p9YscKxct/2/bo89/Y1pxSILkBt64MfQRphpZDFdwNY=,tag:aKZo/PGZcrRKdpJPKGmPeA==,type:str]
     AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:SsGKzZo4lN5KG2BIaIt01KPs4CCE7g1vBbKBNqW5javhU1EBlwRkYZtgsuot4SZiRAZ7FI+Mp69uEyqSg4okJlAbUYAn18tKzkk3Fg==,iv:NXT9nBKCet7sKgorlxgDERgdHnLfxTHCKlHk6ar4TGE=,tag:enpRIjinDV5KQKFp3yuV6Q==,type:str]
-    #ENC[AES256_GCM,data:8A8+LSX7ypsCnAK2DJYybgQqexkenVBaQg3HuETHWjnf1oudSgZVN6bV4jMuLjSVR4HjU40PWDLC9Rxu2NYtClX8slfS/x5J9OdGD4vy3EFiTnwwNn1NjlYmU/GBGLg=,iv:+ioaR7NFJewAT+ajCzhfJChxVcu1d0K6K9N0/fDnJ88=,tag:PlCVMSDBVwy2uewAPeDJ8A==,type:comment]
+    AUTHENTIK_EMAIL__PASSWORD: ENC[AES256_GCM,data:v2aU5djsQ7ed8r9j3aYSzQ==,iv:XjIMmwxLOoVpOCrEFNdQ4rm2M0PSLa2NupRI3BTVKlQ=,tag:88C3Lq/OwKS36/O/UpD5Lw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-20T19:43:35Z"
-    mac: ENC[AES256_GCM,data:uYKcWQsVBzbQ/8+/gfcGhNEnelVlfMFBJ68+K0gsLW4boSRyX7oKvBkXW4tWPjQueky5xU+4DZlUB3zfm5R+p/qZY/CnCp3fH+AMhAoIgF1fjOcMOEmdYcxBrH+NqGD5rrgIhVIulHg+NeEwsbQBqFIHVYJ6bgirS2vco+rkLnc=,iv:R089tTlPcf6OfaXdNcrnOVKd67sKAW/C8jpN+KYBeNw=,tag:EKj6mevf7F0Q+AIGrrHe+g==,type:str]
+    lastmodified: "2025-01-20T20:13:01Z"
+    mac: ENC[AES256_GCM,data:xE7ZnwylCGNQTX6/3aKb981QMALgqYOk9U2w9L0/8/wiekMH5qisCrkcpbPDTfMVWc/BMvy9P2A3adkeimHDT7y6MNDsjok44OZ5C2TBYeScvGgjLOwreRX4ojiXGNz4thI562wEmfysr+zRGFgL7vbLv6D+m55A9IbqB94vCE4=,iv:uRGM8l1qeINyX938HWl3gLvxZdMtrNwK2B8aoMihDD8=,tag:u/DceBO8JOMMqjzmQOIlwg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
