vlaue file correction

--- a/argocd/apps/kubeshark/app.yaml
+++ b/argocd/apps/kubeshark/app.yaml
@@ -20,4 +20,5 @@ spec:
     targetRevision: "*"
     chart: kubeshark
     helm:
-      valuesFile: values.yaml
+      valueFiles:
+        - values.yaml
